--- a/templates/createpost.html
+++ b/templates/createpost.html
@@ -7,10 +7,10 @@
 
 
 {% block content %}
-    <div class="container">
+    <div class="container py-3">
         {% load crispy_forms_tags %}
-        <div class="title">
-            <h1>Create <span>New Post</span></h1>
+        <div class="">
+            <h1>Create <span class="text-info">New Post</span></h1>
         </div>
         <div class="forms">
             <form action="" method="post">
