--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,8 @@
 {% extends 'main/base.html' %}
 {% block title %} Home {% endblock title %}
-{% block stylesheets %}{% endblock stylesheets %}
+{% block stylesheets %}
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+{% endblock stylesheets %}
 {% block content %}
   <section id="hero" class=" text-center text-sm-start py-5">
     {% for object in object_list %}  
@@ -9,15 +11,26 @@
             <card-header>
                 <div class="d-flex align-item-start">
                     <h2><span class="text-info">{{ object.title }}</span></h2>
-                    <a href="{% url 'main:updatechek' post.id%}">Modifier</a>
+                    <a href="{% url 'main:update' object.id %}">Modifier</a>
                     </div>
             </card-header>
             <card-body class="px-3 text-start">
                 <p>{{ object.text }}</p>
                 <div class="d-flex justify-content-center">
-                    <button class = "px-5">J'aime</button>
-                    <button class = "px-5">Coment</button>
-                    <button class = "px-5">Share</button>
+                    <button type="button" id="btn"
+                    value="0"
+                    class="btn btn-outline-primary text-white" 
+                    onclick="oncli()">
+                    J'aime
+                    <i class="bi bi-hand-thumbs-up" style="font-size: 1rem; color: white;"></i>
+                     <span id = 'count'>0</span>
+                    </button>
+                    <button type="button" class="btn btn-outline-primary text-white">Coment 
+                      <i class="bi bi-reply" style="color: white;"></i>
+                    </button>
+                    <button type="button" class="btn btn-outline-primary text-white">Share 
+                      <i class="bi bi-share" style="color: white;"></i>
+                    </button>
                 </div>
             </card-body>
         </div>         
@@ -33,4 +46,12 @@
   <!-- Specific JS goes HERE -->
   
 {% block javascripts %}
+<script>
+  var i = 0;
+  function oncli(){
+    i++;
+    s= document.getElementById("btn").value = i
+    document.getElementById("count").textContent= s
+  }
+</script>
 {% endblock javascripts %}
