--- a/templates/main/base.html
+++ b/templates/main/base.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <!-- Specific CSS goes HERE -->
     {% block stylesheets %}{% endblock stylesheets %}
-    <title>{% block title %} Blog- {% endblock %} </title>
+    <title>{% block title %} Blog- {% endblock title %} </title>
 </head>
 <body>
     <header class="p-3 bg-dark text-white">
