--- a/templates/modifierpost.html
+++ b/templates/modifierpost.html
@@ -9,9 +9,9 @@
 
 
 {% block content %}
-    <div class="container">
+    <div class="container py-3">
         {% load crispy_forms_tags %}
-        <h2>Modifeier Post</h2>
+        <h1 class = "text-info">Modifeier Post</h1>
         <div class="forms">
             <form action="" method="post">
                 {% csrf_token %}
