--- a/templates/account/base.html
+++ b/templates/account/base.html
@@ -4,6 +4,7 @@
     <title>{% block head_title %}{% endblock %}</title>
     {% block extra_head %}
     {% endblock %}
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
   </head>
   <body>
     {% block body %}
@@ -19,15 +20,19 @@
     </div>
     {% endif %}
 
-    <div>
+    <div class="container">
       <strong>Menu:</strong>
       <ul>
         {% if user.is_authenticated %}
         <li><a href="{% url 'account_email' %}">Change E-mail</a></li>
         <li><a href="{% url 'account_logout' %}">Sign Out</a></li>
         {% else %}
-        <li><a href="{% url 'account_login' %}">Sign In</a></li>
-        <li><a href="{% url 'account_signup' %}">Sign Up</a></li>
+        <li><a href="{% url 'account_login' %}" 
+          type="button" class="btn btn-outline-primary my-2" 
+          >Sign In</a></li>
+        <li><a href="{% url 'account_signup' %}"
+          type="button" class="btn btn-outline-primary my-2"
+          >Sign Up</a></li>
         {% endif %}
       </ul>
     </div>
@@ -36,5 +41,6 @@
     {% endblock %}
     {% block extra_body %}
     {% endblock %}
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
   </body>
 </html>
