--- a/templates/main/base.html
+++ b/templates/main/base.html
@@ -17,21 +17,40 @@
             <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
               <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"/></svg>
             </a>
-    
+            
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
               <li><a href="{% url 'main:home' %}" class="nav-link px-2 text-secondary">Home</a></li>
               <li><a href="{% url 'main:create' %}" class="nav-link px-2 text-white">Create Form</a></li>
               <li><a href="#" class="nav-link px-2 text-white">About</a></li>
             </ul>
-    
+            
             <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
               <input type="search" class="form-control form-control-dark" placeholder="Search..." aria-label="Search">
             </form>
-    
-            <div class="text-end">
-              <button type="button" class="btn btn-outline-light me-2">Login</button>
-              <button type="button" class="btn btn-warning">Sign-up</button>
+            {% if user.is_authenticated%}
+            <div class="dropdown text-end">
+              {% load static %}
+              <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
+                <img src="https://github.com/mdo.png" alt="mdo" width="32" height="32" class="rounded-circle">
+              </a>
+              <ul class="dropdown-menu text-small" aria-labelledby="dropdownUser1">
+                <li><a class="dropdown-item" href="#">New project...</a></li>
+                <li><a class="dropdown-item" href="#">Settings</a></li>
+                <li><a class="dropdown-item" href="accounts/profile/">Profile</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="accounts/logout/">Sign out</a></li>
+              </ul>
             </div>
+            {% else %}
+            <div class="text-end">
+              <a type="button" class="btn btn-outline-light me-2" 
+              href="/accounts/login">
+              Login</a>
+              <a type="button" class="btn btn-warning"
+              href = '/accounts/signup'>
+                Sign-up</a>
+            </div>
+            {% endif %}
           </div>
         </div>
       </header>
@@ -39,8 +58,16 @@
       {% block content %}{% endblock content %}
 
      
-    
-
+      <footer class="bg-black text-white text-center position-relative py-5">
+        <div class="container">
+            <div class="lead">
+                <p>copyright &copy; 2021</p>
+            </div>
+            <a href="#" class="position-absolute buttom-0 end-0 px-3">
+                <i class="ri-arrow-up-circle-line h2"></i>
+            </a>
+        </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
    <!-- Specific JS goes HERE --> 
   {% block javascripts %}{% endblock javascripts %}
