--- a/templates/main/home.html
+++ b/templates/main/home.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'main/base.html' %}
 {% block title %} Home {% endblock title %}
 {% block stylesheets %}
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
@@ -10,25 +10,27 @@
         <div class="card text-center bg-dark text-light">
             <card-header>
                 <div class="d-flex align-item-start">
-                    <h2><span class="text-info">{{ object.title }}</span></h2>
+                    <h2><span class="text-primary">{{ object.title }}</span></h2>
                     <a href="{% url 'main:update' object.id %}">Modifier</a>
                     </div>
             </card-header>
             <card-body class="px-3 text-start">
                 <p>{{ object.text }}</p>
-                <div class="d-flex justify-content-center">
+                <div class="d-flex justify-content-center my-3 ">
                     <button type="button" id="btn"
                     value="0"
-                    class="btn btn-outline-primary text-white" 
+                    class="btn btn-outline-primary text-white mx-2" 
                     onclick="oncli()">
                     J'aime
                     <i class="bi bi-hand-thumbs-up" style="font-size: 1rem; color: white;"></i>
                      <span id = 'count'>0</span>
                     </button>
-                    <button type="button" class="btn btn-outline-primary text-white">Coment 
+                    <button type="button" class="btn btn-outline-primary text-white mx-2"
+                    onclick="oncli()">Coment 
                       <i class="bi bi-reply" style="color: white;"></i>
+                      <span id = 'count'>0</span>
                     </button>
-                    <button type="button" class="btn btn-outline-primary text-white">Share 
+                    <button type="button" class="btn btn-outline-primary text-white mx-2">Share 
                       <i class="bi bi-share" style="color: white;"></i>
                     </button>
                 </div>
