i'm not sure a bout users

--- a/templates/main/base.html
+++ b/templates/main/base.html
@@ -20,7 +20,7 @@
             
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
               <li><a href="{% url 'main:home' %}" class="nav-link px-2 text-secondary">Home</a></li>
-              <li><a href="{% url 'main:create' %}" class="nav-link px-2 text-white">Create Form</a></li>
+              <li><a href="{% url 'main:create' %}" class="nav-link px-2 text-white">Create Post</a></li>
               <li><a href="#" class="nav-link px-2 text-white">About</a></li>
             </ul>
             
@@ -65,3 +65,14 @@
   {% block javascripts %}{% endblock javascripts %}
 </body>
 </html>
+
+
+
+<!-- <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam quo sequi eius reprehenderit omnis ullam quasi aut porro, ab dolores?</p>
+
+Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut iste illo tempora id repellendus esse architecto atque, adipisci error maxime officia tempore dignissimos amet temporibus eveniet corrupti repellat similique minima facere. Nulla, tempore impedit ratione ipsam, expedita a tempora quas aliquam esse aspernatur quasi in praesentium vitae at iste sapiente quisquam neque dignissimos? Asperiores fugiat unde, natus deserunt hic dignissimos.
+
+Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi eius praesentium aperiam maxime accusamus odit voluptatem. Quas ab doloribus excepturi! Molestias eveniet quidem id maxime, numquam temporibus incidunt repudiandae eius tempora labore iusto nobis nesciunt earum illo obcaecati dolore fugit quos ad laboriosam, voluptas hic sed pariatur? Natus quidem suscipit fugit perspiciatis, pariatur magni, rerum iste soluta aperiam asperiores nam corporis aspernatur omnis tempora? Totam architecto, unde quasi optio maxime alias odit delectus, placeat omnis itaque, dolor perferendis odio. Dolorem doloribus eos odio dolorum minus non qui a accusantium laborum. Amet mollitia ducimus nesciunt placeat maxime magni sequi blanditiis non!
+
+
+Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat illum eius, labore quae, molestiae architecto voluptates minus vitae ipsam consectetur velit consequatur ut, tempore perspiciatis asperiores. Deleniti dolor illo tenetur rerum autem aperiam accusamus. Nemo voluptas impedit dolorum fugit animi excepturi mollitia enim sequi placeat, repudiandae, aperiam vel sapiente illum. -->
